# irsymbolizer

./: .gitignore  CMakeLists.txt  README.md
benchmarks/perf/: Makefile  README.md  dummy  dummy_driver  dummy_driver.c  dummy_driver.ll  main.c  perf_record.sh  save_for_inputs.sh
include/addr2ir/: addr2ir.h
include/cli/: cli.h
include/tui/: tui.h
scripts/: build.sh
src/: #main.cpp#  .#main.cpp  main.cpp
src/addr2ir/: #addr2ir.cpp#  .#addr2ir.cpp  CMakeLists.txt  addr2ir.cpp
src/cli/: CMakeLists.txt  cli.cpp
src/sampler/: CMakeLists.txt  sampler.cpp
src/samples2ir/: CMakeLists.txt  samples2ir.cpp
src/tui/: CMakeLists.txt  tui.cpp
src/visualizer/: CMakeLists.txt  visualizer.cpp
tests/addr2line/: README.md  run_symbolizer_test.sh  temp.sh
tests/symbolizeCodeWrapper/: README.md  run_symbolizer_test.sh  temp.sh  test_cases.csv
